--- a/app/views/hospitals/_show.html.erb
+++ b/app/views/hospitals/_show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "uploadify/swfobject", "uploadify/jquery.uploadify.v2.1.4.min" %>
+<%= javascript_include_tag "/javascripts/uploadify/swfobject.js", "/javascripts/uploadify/jquery.uploadify.v2.1.4.min.js" %>
 
 <% session_key_name = Rails.application.config.session_options[:key] %>
 
@@ -11,10 +11,10 @@ jQuery(document).ready(function() {
 		event.preventDefault();
 	});
 	jQuery('#upload_doc').uploadify({
-		'uploader': '/javascripts/uploadify/uploadify.swf',
-		'script': '/uploads/create',
+		'uploader': '/drug34/javascripts/uploadify/uploadify.swf',
+		'script': '/drug34/uploads/create',
 		'multi': false,
-		'cancelImg': '/images/cancel.png',
+		'cancelImg': '/drug34/images/cancel.png',
 		'scriptData': {
 			'<%= session_key_name %>': encodeURIComponent('<%= u cookies[session_key_name] %>'),
 			'authenticity_token': encodeURIComponent('<%= u form_authenticity_token if protect_against_forgery? %>'),
@@ -22,8 +22,7 @@ jQuery(document).ready(function() {
 			'format': 'json'
 		},
 		onAllComplete: function(){
-			var id = '<%= @hospital.id %>';
-			location.href = "/hospitals/" + id;
+			location.href = "/drug34/hospitals/<%= @hospital.id %>";
 		}
 	});
 	jQuery('#upload_submit').click(function(event){
