--- a/public/stylesheets/drug34.css
+++ b/public/stylesheets/drug34.css
@@ -26,3 +26,12 @@
 .title {
 	color: green;
 }
+#error_explanation {
+	border: 1px solid red;
+	color: red;
+	padding: 0;
+}
+#error_explanation h2 {
+	color: #FFF;
+	background-color: red;
+}
