--- a/app/views/hospitals/_show.html.erb
+++ b/app/views/hospitals/_show.html.erb
@@ -16,6 +16,8 @@ jQuery(document).ready(function() {
 		'multi': false,
 		'cancelImg': '/drug34/images/cancel.png',
 		'scriptData': {
+			'_http_accept': 'application/javascript',
+			'_method': 'POST',
 			'<%= session_key_name %>': encodeURIComponent('<%= u cookies[session_key_name] %>'),
 			'authenticity_token': encodeURIComponent('<%= u form_authenticity_token if protect_against_forgery? %>'),
 			'hospital_id': '<%= @hospital.id %>',
